@@ -31,22 +31,21 @@ public class ProductController {
     @FXML private TextField nameField;
     @FXML private TextField categoryField;
     @FXML private TextField priceField;
-    @FXML private TextField quantityField;
     @FXML private ComboBox<Branch> branchComboBox;
 
-    @FXML private Label userInfoLabel; 
+    @FXML private Label userInfoLabel;
 
     private final ProductService productService = new ProductService();
     private final BranchService branchService = new BranchService();
-    
     private final ObservableList<Product> productList = FXCollections.observableArrayList();
 
     @FXML
     public void initialize() {
+
         if (!PermissionManager.canManageProducts()) {
-            showAlert("Access Denied", 
-                     "You don't have permission to manage products.", 
-                     Alert.AlertType.ERROR);
+            showAlert("Access Denied",
+                    "You don't have permission to manage products.",
+                    Alert.AlertType.ERROR);
             handleBack();
             return;
         }
@@ -58,28 +57,31 @@ public class ProductController {
         loadProducts();
     }
 
+    /* ===================== TABLE ===================== */
     private void setupTableColumns() {
-        colId.setCellValueFactory(data ->
-                new SimpleIntegerProperty(data.getValue().getProductId()).asObject());
 
-        colName.setCellValueFactory(data ->
-                new SimpleStringProperty(data.getValue().getProductName()));
+        colId.setCellValueFactory(d ->
+                new SimpleIntegerProperty(d.getValue().getProductId()).asObject());
 
-        colCategory.setCellValueFactory(data ->
-                new SimpleStringProperty(data.getValue().getCategory()));
+        colName.setCellValueFactory(d ->
+                new SimpleStringProperty(d.getValue().getProductName()));
 
-        colPrice.setCellValueFactory(data ->
-                new SimpleDoubleProperty(data.getValue().getPrice()).asObject());
+        colCategory.setCellValueFactory(d ->
+                new SimpleStringProperty(d.getValue().getCategory()));
 
-        colQuantity.setCellValueFactory(data ->
-                new SimpleIntegerProperty(data.getValue().getQuantity()).asObject());
+        colPrice.setCellValueFactory(d ->
+                new SimpleDoubleProperty(d.getValue().getPrice()).asObject());
 
-        colBranch.setCellValueFactory(data ->
-                new SimpleIntegerProperty(data.getValue().getBranchId()).asObject());
+        // ✅ Read-only stock
+        colQuantity.setCellValueFactory(d ->
+                new SimpleIntegerProperty(d.getValue().getQuantity()).asObject());
+
+        colBranch.setCellValueFactory(d ->
+                new SimpleIntegerProperty(d.getValue().getBranchId()).asObject());
     }
 
+    /* ===================== BRANCH COMBO ===================== */
     private void setupBranchComboBox() {
-        Employee currentUser = SessionManager.getCurrentUser();
 
         if (PermissionManager.isAdmin()) {
             try {
@@ -88,7 +90,7 @@ public class ProductController {
             } catch (AccessDeniedException e) {
                 showAlert("Error", "Failed to load branches", Alert.AlertType.ERROR);
             }
-        } else if (PermissionManager.isManager()) {
+        } else {
             branchComboBox.setDisable(true);
         }
 
@@ -109,59 +111,62 @@ public class ProductController {
         });
     }
 
+    /* ===================== USER INFO ===================== */
     private void setupUserInfo() {
-        if (userInfoLabel != null) {
-            Employee user = SessionManager.getCurrentUser();
-            if (PermissionManager.isManager()) {
-                userInfoLabel.setText(
-                    "⚠️ You can only manage products for Branch ID: " + user.getBranchId()
-                );
-                userInfoLabel.setStyle("-fx-text-fill: #ff6b6b; -fx-font-weight: bold;");
-            } else {
-                userInfoLabel.setText("✓ Admin - Full Access to All Branches");
-                userInfoLabel.setStyle("-fx-text-fill: #51cf66; -fx-font-weight: bold;");
-            }
+
+        Employee user = SessionManager.getCurrentUser();
+
+        if (PermissionManager.isManager()) {
+            userInfoLabel.setText(
+                    "⚠️ You can manage products only for Branch ID: " + user.getBranchId()
+            );
+            userInfoLabel.setStyle("-fx-text-fill: #ff6b6b; -fx-font-weight: bold;");
+        } else {
+            userInfoLabel.setText("✓ Admin - Full Access to All Branches");
+            userInfoLabel.setStyle("-fx-text-fill: #51cf66; -fx-font-weight: bold;");
         }
     }
 
+    /* ===================== SELECTION ===================== */
     private void setupTableSelectionListener() {
-        productTable.getSelectionModel().selectedItemProperty().addListener(
-            (obs, oldVal, selected) -> {
-                if (selected != null) {
-                    nameField.setText(selected.getProductName());
-                    categoryField.setText(selected.getCategory());
-                    priceField.setText(String.valueOf(selected.getPrice()));
-                    quantityField.setText(String.valueOf(selected.getQuantity()));
 
-                    if (PermissionManager.isAdmin()) {
-                        branchComboBox.getItems().forEach(branch -> {
-                            if (branch.getBranchId() == selected.getBranchId()) {
-                                branchComboBox.setValue(branch);
-                            }
-                        });
+        productTable.getSelectionModel().selectedItemProperty().addListener(
+                (obs, oldVal, selected) -> {
+                    if (selected != null) {
+                        nameField.setText(selected.getProductName());
+                        categoryField.setText(selected.getCategory());
+                        priceField.setText(String.valueOf(selected.getPrice()));
+
+                        if (PermissionManager.isAdmin()) {
+                            branchComboBox.getItems().forEach(branch -> {
+                                if (branch.getBranchId() == selected.getBranchId()) {
+                                    branchComboBox.setValue(branch);
+                                }
+                            });
+                        }
                     }
                 }
-            }
         );
     }
 
+    /* ===================== LOAD ===================== */
     @FXML
     public void loadProducts() {
         try {
             productList.clear();
             productList.addAll(productService.getAllProducts());
             productTable.setItems(productList);
-        } catch (AccessDeniedException e) {
-            showAlert("Access Denied", e.getMessage(), Alert.AlertType.ERROR);
         } catch (Exception e) {
-            showAlert("Error", "Failed to load products: " + e.getMessage(), Alert.AlertType.ERROR);
+            showAlert("Error", "Failed to load products", Alert.AlertType.ERROR);
         }
     }
 
+    /* ===================== SEARCH ===================== */
     @FXML
     private void handleSearch() {
+
         String keyword = searchField.getText().trim();
-        
+
         if (keyword.isEmpty()) {
             loadProducts();
             return;
@@ -170,98 +175,106 @@ public class ProductController {
         try {
             productList.clear();
             productList.addAll(productService.searchProducts(keyword));
-            productTable.setItems(productList);
-        } catch (AccessDeniedException e) {
-            showAlert("Access Denied", e.getMessage(), Alert.AlertType.ERROR);
         } catch (Exception e) {
-            showAlert("Error", "Search failed: " + e.getMessage(), Alert.AlertType.ERROR);
+            showAlert("Error", "Search failed", Alert.AlertType.ERROR);
         }
     }
 
+    /* ===================== ADD ===================== */
     @FXML
     private void handleAdd() {
+
         try {
-            if (nameField.getText().trim().isEmpty() ||
-                categoryField.getText().trim().isEmpty() ||
-                priceField.getText().trim().isEmpty() ||
-                quantityField.getText().trim().isEmpty()) {
-                showAlert("Validation Error", "Please fill in all fields.", Alert.AlertType.WARNING);
+            if (nameField.getText().isBlank() ||
+                categoryField.getText().isBlank() ||
+                priceField.getText().isBlank()) {
+
+                showAlert("Validation Error",
+                        "Please fill all required fields.",
+                        Alert.AlertType.WARNING);
                 return;
             }
 
             int branchId;
-            Employee currentUser = SessionManager.getCurrentUser();
+            Employee user = SessionManager.getCurrentUser();
 
             if (PermissionManager.isAdmin()) {
-                Branch selectedBranch = branchComboBox.getValue();
-                if (selectedBranch == null) {
-                    showAlert("Validation Error", "Please select a branch.", Alert.AlertType.WARNING);
+                Branch branch = branchComboBox.getValue();
+                if (branch == null) {
+                    showAlert("Validation Error",
+                            "Please select a branch.",
+                            Alert.AlertType.WARNING);
                     return;
                 }
-                branchId = selectedBranch.getBranchId();
+                branchId = branch.getBranchId();
             } else {
-                branchId = currentUser.getBranchId();
+                branchId = user.getBranchId();
             }
 
             Product product = new Product(
                     nameField.getText().trim(),
                     categoryField.getText().trim(),
                     Double.parseDouble(priceField.getText().trim()),
-                    0, 
-                    Integer.parseInt(quantityField.getText().trim()),
+                    0,      // cost
+                    0,      // quantity always starts at 0
                     branchId
             );
 
             productService.addProduct(product);
-            
             showAlert("Success", "Product added successfully!", Alert.AlertType.INFORMATION);
             loadProducts();
             clearFields();
 
         } catch (NumberFormatException e) {
-            showAlert("Validation Error", "Invalid number format.", Alert.AlertType.WARNING);
-        } catch (AccessDeniedException e) {
-            showAlert("Access Denied", e.getMessage(), Alert.AlertType.ERROR);
+            showAlert("Validation Error", "Invalid price format.", Alert.AlertType.WARNING);
         } catch (Exception e) {
-            showAlert("Error", "Failed to add product: " + e.getMessage(), Alert.AlertType.ERROR);
+            showAlert("Error", e.getMessage(), Alert.AlertType.ERROR);
         }
     }
 
+    /* ===================== UPDATE ===================== */
     @FXML
     private void handleUpdate() {
+
         Product selected = productTable.getSelectionModel().getSelectedItem();
 
         if (selected == null) {
-            showAlert("Selection Required", "Please select a product to update.", Alert.AlertType.WARNING);
+            showAlert("Selection Required",
+                    "Please select a product to update.",
+                    Alert.AlertType.WARNING);
             return;
         }
 
         try {
-            if (nameField.getText().trim().isEmpty() ||
-                categoryField.getText().trim().isEmpty() ||
-                priceField.getText().trim().isEmpty() ||
-                quantityField.getText().trim().isEmpty()) {
-                showAlert("Validation Error", "Please fill in all fields.", Alert.AlertType.WARNING);
+            if (nameField.getText().isBlank() ||
+                categoryField.getText().isBlank() ||
+                priceField.getText().isBlank()) {
+
+                showAlert("Validation Error",
+                        "Please fill all required fields.",
+                        Alert.AlertType.WARNING);
                 return;
             }
 
             int branchId;
-            Employee currentUser = SessionManager.getCurrentUser();
+            Employee user = SessionManager.getCurrentUser();
 
             if (PermissionManager.isAdmin()) {
-                Branch selectedBranch = branchComboBox.getValue();
-                if (selectedBranch == null) {
-                    showAlert("Validation Error", "Please select a branch.", Alert.AlertType.WARNING);
+                Branch branch = branchComboBox.getValue();
+                if (branch == null) {
+                    showAlert("Validation Error",
+                            "Please select a branch.",
+                            Alert.AlertType.WARNING);
                     return;
                 }
-                branchId = selectedBranch.getBranchId();
+                branchId = branch.getBranchId();
             } else {
-                branchId = currentUser.getBranchId();
-                
+                branchId = user.getBranchId();
+
                 if (selected.getBranchId() != branchId) {
-                    showAlert("Access Denied", 
-                             "You can only update products from your branch.", 
-                             Alert.AlertType.ERROR);
+                    showAlert("Access Denied",
+                            "You can update products only in your branch.",
+                            Alert.AlertType.ERROR);
                     return;
                 }
             }
@@ -271,73 +284,67 @@ public class ProductController {
                     nameField.getText().trim(),
                     categoryField.getText().trim(),
                     Double.parseDouble(priceField.getText().trim()),
-                    selected.getCost(), // Keep existing cost
-                    Integer.parseInt(quantityField.getText().trim()),
+                    selected.getCost(),
+                    selected.getQuantity(), // 🔒 quantity unchanged
                     branchId,
                     false
             );
 
             productService.updateProduct(updated);
-            
             showAlert("Success", "Product updated successfully!", Alert.AlertType.INFORMATION);
             loadProducts();
             clearFields();
 
         } catch (NumberFormatException e) {
-            showAlert("Validation Error", "Invalid number format.", Alert.AlertType.WARNING);
-        } catch (AccessDeniedException e) {
-            showAlert("Access Denied", e.getMessage(), Alert.AlertType.ERROR);
+            showAlert("Validation Error", "Invalid price format.", Alert.AlertType.WARNING);
         } catch (Exception e) {
-            showAlert("Error", "Failed to update product: " + e.getMessage(), Alert.AlertType.ERROR);
+            showAlert("Error", e.getMessage(), Alert.AlertType.ERROR);
         }
     }
 
+    /* ===================== DELETE ===================== */
     @FXML
     private void handleDelete() {
+
         Product selected = productTable.getSelectionModel().getSelectedItem();
 
         if (selected == null) {
-            showAlert("Selection Required", "Please select a product to delete.", Alert.AlertType.WARNING);
+            showAlert("Selection Required",
+                    "Please select a product to delete.",
+                    Alert.AlertType.WARNING);
             return;
         }
-        Alert confirmAlert = new Alert(Alert.AlertType.CONFIRMATION);
-        confirmAlert.setTitle("Confirm Delete");
-        confirmAlert.setHeaderText("Delete Product");
-        confirmAlert.setContentText("Are you sure you want to delete: " + selected.getProductName() + "?");
 
-        if (confirmAlert.showAndWait().get() != ButtonType.OK) {
+        Alert confirm = new Alert(Alert.AlertType.CONFIRMATION,
+                "Are you sure you want to delete this product?",
+                ButtonType.OK, ButtonType.CANCEL);
+
+        if (confirm.showAndWait().orElse(ButtonType.CANCEL) != ButtonType.OK) {
             return;
         }
 
         try {
             productService.deleteProduct(selected.getProductId());
-            
             showAlert("Success", "Product deleted successfully!", Alert.AlertType.INFORMATION);
             loadProducts();
             clearFields();
-
-        } catch (AccessDeniedException e) {
-            showAlert("Access Denied", e.getMessage(), Alert.AlertType.ERROR);
         } catch (Exception e) {
-            showAlert("Error", "Failed to delete product: " + e.getMessage(), Alert.AlertType.ERROR);
+            showAlert("Error", e.getMessage(), Alert.AlertType.ERROR);
         }
     }
 
+    /* ===================== NAV ===================== */
     @FXML
     private void handleBack() {
         SceneManager.switchScene("/view/DashboardView.fxml", "Dashboard");
     }
 
+    /* ===================== HELPERS ===================== */
     private void clearFields() {
         nameField.clear();
         categoryField.clear();
         priceField.clear();
-        quantityField.clear();
-        
-        if (PermissionManager.isAdmin()) {
-            branchComboBox.setValue(null);
-        }
-        
+        branchComboBox.setValue(null);
         productTable.getSelectionModel().clearSelection();
     }
 
